examples/negative/silent_contract/handle_partial_with_other_effect.kai
# Silent contract (#511 audit): `handle { ... } with Io` catches
# only `Io`; the body also fires `Log.trace`, so `Log` should
# surface in the enclosing row. `main : Int` (pure) should be
# rejected. Today stage 2 compiles cleanly. See README.

effect Io { print_io(s: String) : Unit }
effect Log { trace(s: String) : Unit }

fn main() : Int {
  let r = handle {
    Io.print_io("a")
    Log.trace("b")
    0
  } with Io {
    print_io(s, resume) -> resume(())
    return(x)           -> x
  }
  r
}
